<?xml version="1.0"?>
<package format="3">
  <name>lslidar_ls_driver</name>
  <version>1.0.5</version>
  <description>ROS device driver for LS lidar</description>

  <maintainer email="tongsky723@sina.com">tongsky</maintainer>
  <author>Yutong</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>angles</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rslidar_input</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libpcap</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>angles</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libpcap</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
